# oss-taapp

./: .dockerignore  .env.example  .env.local  .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  Gmail_Dockerfile  Gmail_README.md  HW2_PLAN.md  README.md  a.txt  jira_tokens.db  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_tokens.db
.circleci/: config.yml
src/chat_ticket_integration/: README.md  pyproject.toml
src/chat_ticket_integration/src/chat_ticket_integration/: example_main.py  integration.py
src/chat_ticket_integration/tests/: test_integration.py
src/discord-client-service-api-client/: README.md  pyproject.toml
src/discord-client-service-api-client/discord_client_service_api_client/: __init__.py
src/discord-client-service-api-client/discord_client_service_api_client/api/authentication/: __init__.py  auth_callback_auth_callback_get.py  login_login_get.py  logout_logout_get.py
src/discord-client-service-api-client/discord_client_service_api_client/api/channel/: __init__.py  get_channel_channels_channel_id_get.py
src/discord-client-service-api-client/discord_client_service_api_client/api/general/: root_get.py
src/discord-client-service-api-client/discord_client_service_api_client/api/messages/: __init__.py  delete_message_channels_channel_id_messages_message_id_delete.py  get_message_channels_channel_id_messages_message_id_get.py  list_channel_messages_channels_channel_id_messages_get.py  send_message_message_recipient_id_post.py
src/discord_client_impl/: README.md  pyproject.toml
src/discord_client_impl/src/discord_client_impl/: __init__.py  discord_impl.py  message_impl.py  py.typed
src/discord_client_impl/tests/: test_message_impl.py
src/gmail_client_impl/: README.md  pyproject.toml
src/gmail_client_impl/src/gmail_client_impl/: __init__.py  _impl.py  gmail_impl.py  message_impl.py
src/gmail_client_impl/tests/: test_authentication.py  test_core_methods.py  test_depinj.py  test_gmail_client_circleci.py  test_gmail_message_circleci.py  test_gmail_message_edge_cases.py  test_gmail_message_impl.py  test_init.py  test_registration.py
src/gmail_message_impl/: pyproject.toml
src/gmail_message_impl/src/gmail_message_impl/: __init__.py  _impl.py
src/gmail_message_impl/tests/: test_edge_cases.py  test_gmail_message.py
src/mail_client_adapter/: README.md  example_usage.py  pyproject.toml
src/mail_client_adapter/src/mail_client_adapter/: __init__.py  api.py  client.py  example_usage.py  mail_client_adapter.py  models.py  service_client_adapter.py  service_message.py
src/mail_client_adapter/tests/: __init__.py  test_adapter.py  test_api.py  test_client.py  test_models.py  test_service_client_adapter.py  test_service_client_adapter_edge_cases.py  test_service_message.py
src/mail_client_api/: README.md  pyproject.toml
src/mail_client_api/src/mail_client_api/: __init__.py  client.py  message.py
src/mail_client_api/tests/: test_mail_client_api.py  test_message_protocol.py
src/mail_client_service/: README.md  __init__.py  main.py  pyproject.toml  pytest.ini
src/mail_client_service/mail_client_service_client/: README.md  pyproject.toml
src/mail_client_service/src/: __init__.py  main.py  models.py
src/mail_client_service/src/mail_client_service/: __init__.py  app.py  fast_api_service.py  main.py  schemas.py  test_client.py
src/mail_client_service/tests/: __init__.py  conftest.py  test-service.py  test_api_endpoints_integration.py  test_app.py  test_client_contract.py  test_delete_message.py  test_get_message_with_id.py  test_get_messages.py  test_mail_client_service.py  test_post_message.py  test_service.py  test_service_endpoints.py
src/mail_client_service/tests/integration/: test_delete_message.py  test_get_message_with_id.py  test_get_messages.py  test_post_message.py
src/mail_client_service/tests/unit/: __init__.py  test_delete_message.py  test_get_message_with_id.py  test_get_messages.py  test_post_message.py
src/mail_client_service_api_client/: pyproject.toml
src/mail_client_service_api_client/mail_client_service_api_client/models/: __init__.py
src/mail_client_service_api_client/models/: root_get_response_root_get.py
src/mail_client_service_api_client/src/mail_client_service_api_client/: __init__.py
src/mail_client_service_api_client/tests/: test_api_authentication_login.py  test_api_authentication_logout.py  test_api_delete_message.py  test_api_get_message.py  test_api_mark_message_as_read.py  test_api_messages.py  test_api_validation_error.py  test_client_behavior.py
src/mail_client_service_client/: pyproject.toml
src/mail_client_service_client/src/mail_client_service_client/: __init__.py
src/message/: pyproject.toml
src/message/src/message/: __init__.py
src/message/tests/: test_message.py
src/service_client_adapter/: README.md  pyproject.toml
src/service_client_adapter/src/service_client_adapter/: __init__.py  main.py
src/service_client_adapter/tests/: test_service_client_adapter.py  test_service_client_adapter_errors.py
src/ticket_impl/: pyproject.toml
src/ticket_impl/src/ticket_impl/: __init__.py  config.py  impl.py  jira_client.py  oauth.py  storage.py
src/ticket_impl/tests/: conftest.py  test_ticket_impl.py
src/trello_client_adapter/: README.md  pyproject.toml
src/trello_client_adapter/src/trello_client_adapter/: __init__.py  trello_client_adapter.py
src/trello_client_api/: README.md  pyproject.toml
src/trello_client_api/src/trello_client_api/: __init__.py  client.py  exceptions.py  models.py
src/trello_client_api/tests/: test_exceptions.py
src/trello_client_impl/: README.md  pyproject.toml
src/trello_client_impl/src/trello_client_impl/: __init__.py  database.py  oauth.py  trello_impl.py
src/trello_client_impl/tests/: test_oauth.py  test_trello_impl.py
src/trello_client_service/: README.md  pyproject.toml
src/trello_client_service/src/trello_client_service/: __init__.py  main.py
src/trello_client_service/tests/: test_service.py  test_service_error_paths.py  test_service_extra.py  test_trello_service_integration.py
(+147 files in other folders)
