[project]
name = "discord-client-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "chat-client-api",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests", "src"]
addopts = ["--cov", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", ]


[tool.coverage.report]
fail_under = 85 # Justification: A high threshold ensures most code is tested.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discord_client_impl"]

[tool.hatch.build.targets.wheel.force-include]
"src/discord_client_impl/py.typed" = "discord_client_impl/py.typed"

[tool.ruff]
line-length = 100  # Default formatting width
target-version = "py311"  # Adjust based on actual Python version
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = []
[tool.mypy]
# Local mypy settings for this package. Keep most checks strict but silence
# missing stubs for authlib's httpx integration (no published types as of now).
ignore_missing_imports = false
explicit_package_bases = true

[tool.mypy."authlib.integrations.httpx_client"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.uv.sources]
chat-client-api = { workspace = true }
