[project]
name = "gmail-client-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.177.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "mail-client-api",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_client_impl"]

[tool.hatch.build.targets.wheel.force-include]
"src/gmail_client_impl/py.typed" = "gmail_client_impl/py.typed"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.uv.sources]
mail-client-api = { workspace = true }
