[project]
name = "mail-client-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client_api"]

[tool.hatch.build.targets.wheel.force-include]
"src/mail_client_api/py.typed" = "mail_client_api/py.typed"

[tool.ruff]
extend = "../../pyproject.toml"
