[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail_client_service"
version = "0.1.0"
description = "FastAPI service wrapper for mail client operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "gmail-client-impl",
    "mail-client-api",
]

[tool.uv.sources]
gmail-client-impl = { workspace = true }
mail-client-api = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client_service"]
