[project]
name = "mail-client-service-api-client"
version = "1.0.0"
description = "A client library for accessing Mail Client Service API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_client_service_api_client"]

[tool.hatch.build.targets.wheel.force-include]
"src/mail_client_service_api_client/py.typed" = "mail_client_service_api_client/py.typed"

[tool.hatch.build]
include = [
    "CHANGELOG.md",
    "mail_client_service_api_client/py.typed",
    "mail_client_service_api_client",
]
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
